# s9s-socat

./: CMakeLists.txt  config.h
doc/: socat.1
